# python-prj-template

./: .gitignore  README.md  config.toml  log.txt  pyproject.toml
.github/workflows/: python-app.yml
docs/: README.md
python_prj_template/: main.py
python_prj_template/driver/: config.toml  database.py  opensearch_driver.py
python_prj_template/service/: database_service.py
python_prj_template/utils/: logger.py
src/python_prj_template/: __init__.py  main.py
src/python_prj_template/logger/: logger.py
src/python_prj_template/opensearch/: client.py
tests/: test_client.py  test_database.py
