[tool.poetry]
name = "python-prj-template"
version = "0.1.0"
description = "Python project template."
authors = ["siroa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
opensearch-py = "^2.6.0"
injector = "^0.22.0"
pytest-cov = "^5.0.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
warn_unused_configs = true



[[tool.mypy.overrides]]
# サードパーティの[import-untyped]を無視する
module = [
    'toml',
]
ignore_missing_imports = true


[tool.ruff]
line-length = 99
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]
[tool.ruff.lint]
# PEP8のどのルールを対象に警告を出すか
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "C",
    "E",
    "F",
    "W",
]
ignore = [
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"


# https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
# https://docs.astral.sh/ruff/settings/