[project]
name = "python-prj-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "siroa", email = "blueskymizo1218@outlook.jp" }
]
dependencies = [
    "pytest>=8.3.2",
    "toml>=0.10.2",
    "opensearch-py>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_prj_template"]

[[tool.mypy.overrides]]
# サードパーティの[import-untyped]を無視する
module = [
    'toml',
    'python_prj_template.opensearch.client'
]
ignore_missing_imports = true
